--- a/source/index.html
+++ b/source/index.html
@@ -2,11 +2,182 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Мишка</title>
+    <title>Магазин "Мишка"</title>
   </head>
   <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+    <header class="page-header">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image"
+        src="img/bkgd/mishka-logo-mobile-svg-copy@3x.png"
+        width="86" height="35" alt="Магазин Мишка">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">
+          Открыть меню</button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list site-list">
+          <li class="site-list__item site-list__item--active
+          visually-hidden">
+            <a>Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a href="catalog.html">Каталог товаров</a>
+          </li>
+          <li class="site-list__item">
+            <a href="form.html">Вязание на заказ</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">Поиск по сайту</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">Корзина:пока пуста</a>
+          </li>
+          </ul>
+          <ul class="main-nav__list user-list">
+          <li class="user-list__item">
+            <a class="user-list__login" href="login.html">Войти</a>
+          </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <main class="page-main">
+
+      <h1 class="visually-hidden">Магазин плюшевых изделий
+        - Мишка</h1><!--для читалок-->
+      <h2 class="second-topic">Милые штуки ручной работы для дома</h2>
+
+      <section class="range">
+        <ul class="range__list">
+          <li class="range__item">
+            Предметы интерьера
+          </li>
+          <li class="range__item">
+            Детские игрушки
+          </li>
+        </ul>
+      </section>
+      <article class="offer">
+        <b class="offer__name">Вязанные корзинки</b>
+        <small class="offer__legend offer__legend--top">
+          товар недели
+        </small>
+        <p class="offer__discrip">Экологически чистая пряжа,
+          ручная работа. Доступны в шести расцветках и трех
+          размерах.</p>
+        <table class="offer__list">
+          <tr>
+            <td class="offer__char">
+              Цвет:
+            </td>
+            <td class="offer__value">
+              "Тиффани"/серый
+            </td>
+            <td class="offer__char">
+              Диаметр:
+            </td>
+            <td class="offer__value">
+              25 см
+            </td>
+            <td class="offer__char">
+              Высота:
+            </td>
+            <td class="offer__value">
+              15 см
+            </td>
+          </tr>
+        </table>
+        <small class="offer__legend offer__legend--bottom">
+          товар недели
+        </small>
+        <img class="offer__image" src="img/content/triple-set-mobile.jpg"
+        width="260" height="315" alt="товар дня">
+        <p class="offer__price">Цена: 990 руб.</p>
+        <a href="#" class="button button__order">Заказать</a>
+      </article>
+      <section class="about">
+        <h3 class="about__header">Коротко о нас:</h3>
+        <ul class="about__list">
+          <li class="about__item--eco">
+            Экологически чистые материалы
+          </li>
+          <li class="about__item--price">
+            Скандинавский стиль по российской цене
+          </li>
+          <li class="about__item--heart">
+            Увеличивает лайки на фотографиях
+          </li>
+          <li class="about__item--ball">
+            Связано вручную с любовью и умилением
+          </li>
+          <li class="about__item--rocket">
+            Поддержка отечественного производителя
+          </li>
+          <li class="about__item--gift">
+            Поставляется в подарочной упаковке
+          </li>
+        </ul>
+
+        <h3 class="about__review">Отзывы</h3>
+        <div class="about__wrapper slider">
+          <ul class="about__list">
+            <li class="about__text slider">Я молодая мама, но всё равно
+            фотографии не набирали и близко такого количества лайков,
+            как у популярных инстамамоек. В отчаянии, я накупила
+            аксессуаров и игрушек в Мишке, и мои фотографии сразу
+            стали более стильными, а также набирают больше лайков!
+              <b class="about__author">Анастасия Красильникова</b>
+              <p class="about__text">@misssssiskras</p>
+            </li>
+          </ul>
+
+            <button class="about__prev" type="button">Назад</button>
+            <button class="about__next" type="button">Вперёд</button>
+
+        <!--SLIDER!!!!!!!!!!!!!!!!!!!-->
+        </div>
+      </section>
+    </main>
+
+   <footer class="page-footer">
+      <h3 class="page-footer__contacts contacts">Контакты</h3>
+      <table>
+        <tr>
+          <td class="contacts__char">
+            e-mail:
+          </td>
+          <td class="contacts__value">
+            info@mimimishkashop.ru
+          </td>
+          <td class="contacts__char">
+            адрес:
+          </td>
+          <td class="contacts__value">
+            г. Санкт-Петербург, улю Большая Конюшенная, д. 19/8, офис 101
+          </td>
+        </tr>
+      </table>
+      <img src="img/content/map-mobile@3x.jpg" width="322" height="457"
+      alt="г. Санкт-Петербург, улю Большая Конюшенная, д. 19/8, офис 101">
+      <a href="#" class="button button-order">Напишите нам</a>
+
+      <div class="contacts__wrapper--social">
+        <ul class="contacts__list">
+          <li class="contacts__item--insta">инстаграм</li>
+          <li class="contacts__item--fb">фейсбук</li>
+          <li class="contacts__item--tw">твиттер</li>
+        </ul>
+      </div>
+
+      <div class="contacts__wrapper--developer">
+        <ul class="contacts__list">
+          <li class="contacts__item--developer">Разработано</li>
+          <li class="contacts__item--academy">htmlacademy</li>
+        </ul>
+       </div>
+    </footer>
 
   </body>
 </html>
