--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,19 +3,24 @@
 
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Магазин "Мишка"</title>
     </head>
 
     <body>
       <header class="page-header">
         <nav class="main-nav">
-        <a class="page-header__logo">
-          <img class="page-header__logo-image"
-          src="img/bkgd/mishka-logo-mobile-svg-copy@3x.png"
-          width="86" height="35" alt="Магазин Мишка">
-        </a>
-        <button class="main-nav__toggle" type="button">
-          Открыть меню</button>
+
+          <div class="page-header page-header__wrapper">
+            <a href="index.html" class="page-header__logo">
+              <img class="page-header__logo-image"
+              src="img/bkgd/mishka-logo-mobile-svg-copy@3x.png"
+              width="86" height="35" alt="Магазин Мишка">
+            </a>
+            <button class="main-nav__toggle" type="button">
+              Открыть меню</button>
+            </div>
+
           <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--active">
             <a class="main-nav__main">Главная</a>
@@ -42,52 +47,79 @@
     </header>
 
     <main class="catalog-main">
-      <h1 class="catalog-main__header first-topic">Каталог товаров</h1>
+      <h1 class="catalog-main__header main-topic">Каталог товаров</h1>
 
       <section class="catalog">
         <div class="catalog__item">
-          <img src="#" width="260" height="195" alt="зайчик">
-          <h2>Зайчик-попрыгайчик</h2>
-          <p>Рост 30 см, вес 200 г</p>
-          <a class="button button__price" href="#">1 200 руб.</a>
+          <a class="catalog__link" href="#">
+            <img class="catalog__img" src="img/content/photo-1-mobile@3x.jpg"
+            width="260" height="195" alt="зайчик">
+          <h2 class="catalog__heading">Зайчик-попрыгайчик</h2></a>
+          <p class="catalog__discription">Рост 30 см, вес 200 г</p>
+          <p class="catalog__price">1 200 руб.</p>
+          <a class="button button-popup" href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20.294" height="18.849" viewBox="264.205 370.961 20.294 18.849">
+            <path fill="#231F20" d="M283.75 378.19h-3.151l-3.407-6.814c-.185-.37-.634-.52-1.006-.335-.371.186-.521.636-.335 1.006l3.071 6.143h-9.138l3.072-6.143c.185-.371.035-.821-.335-1.006-.37-.185-.821-.035-1.006.335l-3.407 6.814h-3.151c-.414 0-.75.336-.75.75s.336.75.75.75h.157l.855 2.991c-.187.137-.316.347-.316.595 0 .396.309.71.697.739l1.656 5.795h12.697l1.656-5.795c.388-.028.698-.344.698-.739 0-.249-.129-.459-.316-.596l.854-2.991h.157c.414 0 .75-.336.75-.75s-.338-.749-.752-.749zm-4.181 10.121h-10.433l-1.224-4.284h12.881l-1.224 4.284zm1.653-5.785h-13.739l-.81-2.836h15.359l-.81 2.836z"/>
+            </svg>
+          </a>
         </div>
+
         <div class="catalog__item">
-          <img src="#" width="260" height="195" alt="зайчик">
-          <h2>Корзинка для белья</h2>
-          <p>Диаметр 15 см, высота 10 см</p>
-          <a class="button button__price" href="#">690 руб.</a>
+          <a class="catalog__link" href="#">
+            <img class="catalog__img" src="img/content/photo-2-mobile@3x.jpg"
+            width="260" height="195" alt="корзинка">
+          <h2 class="catalog__heading">Корзинка для белья</h2></a>
+          <p class="catalog__discription">Диаметр 15 см, высота 10 см</p>
+          <p class="catalog__price">690 руб.</p>
+          <a class="button button-popup" href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20.294" height="18.849" viewBox="264.205 370.961 20.294 18.849">
+            <path fill="#231F20" d="M283.75 378.19h-3.151l-3.407-6.814c-.185-.37-.634-.52-1.006-.335-.371.186-.521.636-.335 1.006l3.071 6.143h-9.138l3.072-6.143c.185-.371.035-.821-.335-1.006-.37-.185-.821-.035-1.006.335l-3.407 6.814h-3.151c-.414 0-.75.336-.75.75s.336.75.75.75h.157l.855 2.991c-.187.137-.316.347-.316.595 0 .396.309.71.697.739l1.656 5.795h12.697l1.656-5.795c.388-.028.698-.344.698-.739 0-.249-.129-.459-.316-.596l.854-2.991h.157c.414 0 .75-.336.75-.75s-.338-.749-.752-.749zm-4.181 10.121h-10.433l-1.224-4.284h12.881l-1.224 4.284zm1.653-5.785h-13.739l-.81-2.836h15.359l-.81 2.836z"/>
+            </svg>
+          </a>
         </div>
+
         <div class="catalog__item">
-          <img src="#" width="260" height="195" alt="зайчик">
-          <h2>Большая корзинка для игрушек</h2>
-          <p>Диаметр 30 см, высота 30 см</p>
-          <a class="button button__price" href="#">1 500 руб.</a>
+          <a class="catalog__link" href="#">
+            <img class="catalog__img" src="img/content/photo-3-mobile@3x.jpg"
+            width="260" height="195" alt="большая корзинка">
+          <h2 class="catalog__heading">Большая корзинка для игрушек</h2></a>
+          <p class="catalog__discription">Диаметр 30 см, высота 30 см</p>
+          <p class="catalog__price">1 500 руб.</p>
+          <a class="button button-popup" href="#">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20.294" height="18.849" viewBox="264.205 370.961 20.294 18.849">
+              <path fill="#231F20" d="M283.75 378.19h-3.151l-3.407-6.814c-.185-.37-.634-.52-1.006-.335-.371.186-.521.636-.335 1.006l3.071 6.143h-9.138l3.072-6.143c.185-.371.035-.821-.335-1.006-.37-.185-.821-.035-1.006.335l-3.407 6.814h-3.151c-.414 0-.75.336-.75.75s.336.75.75.75h.157l.855 2.991c-.187.137-.316.347-.316.595 0 .396.309.71.697.739l1.656 5.795h12.697l1.656-5.795c.388-.028.698-.344.698-.739 0-.249-.129-.459-.316-.596l.854-2.991h.157c.414 0 .75-.336.75-.75s-.338-.749-.752-.749zm-4.181 10.121h-10.433l-1.224-4.284h12.881l-1.224 4.284zm1.653-5.785h-13.739l-.81-2.836h15.359l-.81 2.836z"/>
+              </svg>
+          </a>
         </div>
       </section>
 
-      <article>
-        <h2>Процесс производства</h2>
-        <video src="#" width="260" height="150"></video>
-        <p>По просьбам наших любимых фолловеров мы сняли для вас
+      <article class="video">
+        <h2 class="video__heading">Процесс производства</h2>
+        <video class="video__video" src="#" width="260" height="150"></video>
+        <p class="video__text">По просьбам наших любимых фолловеров мы сняли для вас
           подробное видео о том, как появляются наши товары.</p>
-        <a class="button button__order" href="#">Сделать заказ</a>
+        <a class="button video__button" href="#">Сделать заказ</a>
       </article>
 
     </main>
 
     <footer class="page-footer contacts">
 
-        <ul class="contacts__socials">
-          <li class="contacts__item contacts__item--insta"><a href="#">инстаграм</a></li>
-          <li class="contacts__item contacts__item--fb"><a href="#">фейсбук</a></li>
-          <li class="contacts__item contacts__item--tw"><a href="#">твиттер</a></li>
-        </ul>
+      <ul class="contacts__socials">
+        <li class="contacts__item contacts__item--insta"><a href="#">инстаграм</a></li>
+        <li class="contacts__item contacts__item--fb"><a href="#">фейсбук</a></li>
+        <li class="contacts__item contacts__item--tw"><a href="#">твиттер</a></li>
+      </ul>
 
-        <ul class="contacts__copyright">
-          <li class="contacts__copy contacts__copy--developer">Разработано</li>
-          <li class="contacts__copy contacts__copy--academy"><a href="#">htmlacademy</a></li>
-        </ul>
-    </footer>
+      <address>
+        <h3>Разработано</h3>
+          <a href="https://htmlacademy.ru/intensive/adaptive">
+            <svg xmlns="http://www.w3.org/2000/svg" width="26.943" height="34.09" viewBox="0 0 26.943 34.09">
+              <path d="M13.62.017L13.472 0 0 1.412v24.661l13.473 8.017 13.43-7.99.042-.025V1.412L13.62.017zm11.399 12.11L13.495 5.334l-.001-.104-.087.05-.088-.056v.109L1.925 12.118V3.147l11.548-1.212L25.02 3.147v8.98zm-11.614-5.34L24.923 13.5l-4.479 2.64-7.093-4.221-.014 1.415 5.904 3.513-.86.507-5.03-2.992-.014 1.415 3.827 2.275-.782.523-3.031-1.787-.014 1.413 1.853 1.091-1.8 1.081-11.356-6.751 11.371-6.835zm-11.48 8.34l11.411 6.791.016 1.044-7.942-4.728-.015 1.416 7.979 4.795.018 1.076-7.973-4.74-.013 1.414 8.021 4.822.046.025 8.143-4.872-.011-5.177 3.415-2.036v10.021L13.472 31.85 1.925 24.979v-9.852z"/>
+            </svg>
+            <p class="visually-hidden">htmlacademy</p></a>
+      </address>
+  </footer>
 
     </body>
 
