--- a/source/index.html
+++ b/source/index.html
@@ -2,12 +2,15 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Магазин "Мишка"</title>
   </head>
   <body>
 
     <header class="page-header">
         <nav class="main-nav">
+
+          <div class="page-header page-header__wrapper">
         <a class="page-header__logo">
           <img class="page-header__logo-image"
           src="img/bkgd/mishka-logo-mobile-svg-copy@3x.png"
@@ -15,6 +18,8 @@
         </a>
         <button class="main-nav__toggle" type="button">
           Открыть меню</button>
+        </div>
+
           <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--active">
             <a class="main-nav__main">Главная</a>
@@ -43,7 +48,7 @@
     <main class="page-main">
 
 
-      <h1 class="page-main__header first-topic">Милые штуки ручной работы для дома</h1>
+      <h1 class="page-main__header main-topic">Милые штуки ручной работы для дома</h1>
 
       <section class="range">
         <ul class="range__list">
@@ -56,7 +61,7 @@
         </ul>
       </section>
       <article class="offer">
-        <div>
+        <div class="offer__wrapper">
           <header class="offer__name">Вязанные корзинки
           </header>
           <span class="offer__legend offer__legend--top">
@@ -88,13 +93,15 @@
             </td>
           </tr>
         </table>
-        <span class="offer__legend offer__legend--bottom">
+        <!--<span class="offer__legend offer__legend--bottom">
           товар недели
-        </span>
+        </span> Я тоже не знаю зачем, но они в видео сказали, что
+        надо продублировать, но возможно это было актуально для legend
+        а у нас теперь спан, поэтому наверно убираю-->
         <img class="offer__image" src="img/content/triple-set-mobile.jpg"
         width="260" height="315" alt="товар дня">
         <p class="offer__price">Цена: 990 руб.</p>
-        <a href="#" class="button button__order">Заказать</a>
+        <a href="#" class="button button-order">Заказать</a>
       </article>
       <section class="about">
         <h2 class="about__header">Коротко о нас:</h2>
@@ -102,7 +109,7 @@
           <li class="about__item about__item--eco">
             Экологически чистые материалы
           </li>
-          <li class="about__item--price">
+          <li class="about__item about__item--price">
             Скандинавский стиль по российской цене
           </li>
           <li class="about__item about__item--heart">
@@ -121,21 +128,22 @@
 
         <h2 class="about__review">Отзывы</h2>
         <div class="about__wrapper slider">
+          <div class="about__text">
             <blockquote class="about__text">Я молодая мама, но всё равно
             фотографии не набирали и близко такого количества лайков,
             как у популярных инстамамоек. В отчаянии, я накупила
             аксессуаров и игрушек в Мишке, и мои фотографии сразу
             стали более стильными, а также набирают больше лайков!</blockquote>
             <cite class="about__author">Анастасия Красильникова</cite>
-            <a href="#" class="about__text">@misssssiskras</a>
+            <a href="#" class="about__email">@misssssiskras</a>
+          </div>
 
-
-            <div class="about__wrapper">
-            <button class="about__button about__button--prev"
-             type="button">Назад</button>
-            <button class="about__button about__button--next"
-             type="button">Вперёд</button><!-- SLIDER!!!-->
-            </div>
+          <div class="about__slider">
+              <button class="about__button about__button--prev"
+              type="button">Назад</button>
+              <button class="about__button about__button--next"
+              type="button">Вперёд</button><!-- SLIDER!!!-->
+          </div>
         </div>
       </section>
     </main>
@@ -151,7 +159,8 @@
           </li>
       </ul>
       <div class="contacts__map">
-        <img src="img/content/map-mobile@3x.jpg" width="322" height="457"
+        <img class="contacts__img" src="img/content/map-mobile@3x.jpg"
+        width="322" height="457"
         alt="г. Санкт-Петербург, улю Большая Конюшенная, д. 19/8, офис 101">
       </div>
       <a href="#" class="button button-order">Напишите нам</a>
@@ -162,10 +171,14 @@
           <li class="contacts__item contacts__item--tw"><a href="#">твиттер</a></li>
         </ul>
 
-        <ul class="contacts__copyright">
-          <li class="contacts__copy contacts__copy--developer">Разработано</li>
-          <li class="contacts__copy contacts__copy--academy"><a href="#">htmlacademy</a></li>
-        </ul>
+        <address>
+          <h3>Разработано</h3>
+            <a href="https://htmlacademy.ru/intensive/adaptive">
+              <svg xmlns="http://www.w3.org/2000/svg" width="26.943" height="34.09" viewBox="0 0 26.943 34.09">
+                <path d="M13.62.017L13.472 0 0 1.412v24.661l13.473 8.017 13.43-7.99.042-.025V1.412L13.62.017zm11.399 12.11L13.495 5.334l-.001-.104-.087.05-.088-.056v.109L1.925 12.118V3.147l11.548-1.212L25.02 3.147v8.98zm-11.614-5.34L24.923 13.5l-4.479 2.64-7.093-4.221-.014 1.415 5.904 3.513-.86.507-5.03-2.992-.014 1.415 3.827 2.275-.782.523-3.031-1.787-.014 1.413 1.853 1.091-1.8 1.081-11.356-6.751 11.371-6.835zm-11.48 8.34l11.411 6.791.016 1.044-7.942-4.728-.015 1.416 7.979 4.795.018 1.076-7.973-4.74-.013 1.414 8.021 4.822.046.025 8.143-4.872-.011-5.177 3.415-2.036v10.021L13.472 31.85 1.925 24.979v-9.852z"/>
+              </svg>
+              <p class="visually-hidden">htmlacademy</p></a>
+        </address>
     </footer>
 
   </body>
