--- a/source/form.html
+++ b/source/form.html
@@ -59,12 +59,12 @@
             <li><input class="visually-hidden form-main__filter"
               type="radio" name="type-group" id="filter-accessory"
               value="accessory" checked>
-            <label for="filter-accessory" class="form-main__label--acc">
+            <label for="filter-accessory" class="form-main__label">
               <span>Аксессуар для интерьера</span></label></li>
             <li><input class="visually-hidden form-main__filter"
             type="radio" name="type-group" id="filter-toy"
             value="toy">
-            <label for="filter-toy" class="form-main__label--acc">
+            <label for="filter-toy" class="form-main__label">
               <span>Детская игрушка</span></label></li>
           </ul>
         </fieldset>
@@ -109,42 +109,46 @@
 
         <legend class="form-main__legend">фио</legend>
           <ul>
-            <li><label for="name">Имя:</label>
+            <li><label for="name" class="form-main__label
+            form-main__label--name">Имя:</label>
             <input class="form-main__input form-main__input--name" type="text"
             name="name" id="name"
             placeholder="Введите ваше имя*" required></li>
 
-            <li><label for="surname">Фамилия:</label>
+            <li><label for="surname" class="form-main__label
+            form-main__label--surname">Фамилия:</label>
             <input class="form-main__input form-main__input--name" type="text"
             name="surname" id="surname"
             placeholder="Укажите фамилию*" required></li>
 
-            <li><label for="middlename">Отчество:</label>
+            <li><label for="middlename" class="form-main__label
+              form-main__label--middlename">Отчество:</label>
             <input class="form-main__input form-main__input--name" type="text"
             name="middlename" id="middlename"
             placeholder="Отчество, если желаете" ></li>
 
-            <li><label for="tel">тел</label>
-            <label for="tel"></label>
+            <li><label for="tel" class="form-main__label
+              form-main__label--tel">тел</label>
             <input class="form-main__input form-main__input--tel" type="tel"
             name="tel" id="tel"
             placeholder="+7 XXX XXX XX XX*" required></li>
 
-            <li><label for="email"> e-mail</label>
-            <label for="email"></label>
+            <li><label for="email" class="form-main__label
+              form-main__label--email"> e-mail</label>
             <input class="form-main__input form-main__input--email" type="email"
             name="email" id="email"
             placeholder="Ваш Email*" required></li>
 
 
-            <li><label for="text">доп</label>
+            <li><label for="text" class="form-main__label
+              form-main__label--text">доп</label>
             <textarea name="text" id="text" cols="30" rows="10"
             placeholder="Опишите все ваши пожелания к заказу"></textarea></li>
           </ul>
-          <cite>*Поля обязательны для заполнения</cite>
+          <cite class="form-main__cite">*Поля обязательны для заполнения</cite>
 
       </fieldset>
-      <button class="button" type="submit">отправить заказ</button>
+      <button class="button button-order" type="submit">отправить заказ</button>
 
       </form>
     </main>
@@ -160,7 +164,7 @@
       </ul>
 
       <address>
-        <h3>Разработано</h3>
+        <p>Разработано</p>
           <a href="https://htmlacademy.ru/intensive/adaptive">
             <svg xmlns="http://www.w3.org/2000/svg" width="26.943" height="34.09" viewBox="0 0 26.943 34.09">
               <path d="M13.62.017L13.472 0 0 1.412v24.661l13.473 8.017 13.43-7.99.042-.025V1.412L13.62.017zm11.399 12.11L13.495 5.334l-.001-.104-.087.05-.088-.056v.109L1.925 12.118V3.147l11.548-1.212L25.02 3.147v8.98zm-11.614-5.34L24.923 13.5l-4.479 2.64-7.093-4.221-.014 1.415 5.904 3.513-.86.507-5.03-2.992-.014 1.415 3.827 2.275-.782.523-3.031-1.787-.014 1.413 1.853 1.091-1.8 1.081-11.356-6.751 11.371-6.835zm-11.48 8.34l11.411 6.791.016 1.044-7.942-4.728-.015 1.416 7.979 4.795.018 1.076-7.973-4.74-.013 1.414 8.021 4.822.046.025 8.143-4.872-.011-5.177 3.415-2.036v10.021L13.472 31.85 1.925 24.979v-9.852z"/>
