--- a/source/catalog.html
+++ b/source/catalog.html
@@ -51,9 +51,10 @@
 
       <section class="catalog">
         <div class="catalog__item">
-          <a class="catalog__link" href="#">
-            <img class="catalog__img" src="img/content/photo-1-mobile@3x.jpg"
-            width="260" height="195" alt="зайчик">
+          <a class="catalog__link catalog__link--img" href="#">
+          <img class="catalog__img" src="img/content/photo-1-mobile@3x.jpg"
+          width="260" height="195" alt="зайчик"></a>
+          <a class="catalog__link catalog__link--heading" href="#">
           <h2 class="catalog__heading">Зайчик-попрыгайчик</h2></a>
           <p class="catalog__discription">Рост 30 см, вес 200 г</p>
           <p class="catalog__price">1 200 руб.</p>
@@ -65,9 +66,10 @@
         </div>
 
         <div class="catalog__item">
-          <a class="catalog__link" href="#">
+          <a class="catalog__link catalog__link--img" href="#">
             <img class="catalog__img" src="img/content/photo-2-mobile@3x.jpg"
-            width="260" height="195" alt="корзинка">
+            width="260" height="195" alt="корзинка"></a>
+          <a class="catalog__link catalog__link--heading" href="#">
           <h2 class="catalog__heading">Корзинка для белья</h2></a>
           <p class="catalog__discription">Диаметр 15 см, высота 10 см</p>
           <p class="catalog__price">690 руб.</p>
@@ -79,9 +81,10 @@
         </div>
 
         <div class="catalog__item">
-          <a class="catalog__link" href="#">
+          <a class="catalog__link catalog__link--img" href="#">
             <img class="catalog__img" src="img/content/photo-3-mobile@3x.jpg"
-            width="260" height="195" alt="большая корзинка">
+            width="260" height="195" alt="большая корзинка"></a>
+          <a class="catalog__link catalog__link--heading" href="#">
           <h2 class="catalog__heading">Большая корзинка для игрушек</h2></a>
           <p class="catalog__discription">Диаметр 30 см, высота 30 см</p>
           <p class="catalog__price">1 500 руб.</p>
@@ -112,7 +115,7 @@
       </ul>
 
       <address>
-        <h3>Разработано</h3>
+        <p>Разработано</p>
           <a href="https://htmlacademy.ru/intensive/adaptive">
             <svg xmlns="http://www.w3.org/2000/svg" width="26.943" height="34.09" viewBox="0 0 26.943 34.09">
               <path d="M13.62.017L13.472 0 0 1.412v24.661l13.473 8.017 13.43-7.99.042-.025V1.412L13.62.017zm11.399 12.11L13.495 5.334l-.001-.104-.087.05-.088-.056v.109L1.925 12.118V3.147l11.548-1.212L25.02 3.147v8.98zm-11.614-5.34L24.923 13.5l-4.479 2.64-7.093-4.221-.014 1.415 5.904 3.513-.86.507-5.03-2.992-.014 1.415 3.827 2.275-.782.523-3.031-1.787-.014 1.413 1.853 1.091-1.8 1.081-11.356-6.751 11.371-6.835zm-11.48 8.34l11.411 6.791.016 1.044-7.942-4.728-.015 1.416 7.979 4.795.018 1.076-7.973-4.74-.013 1.414 8.021 4.822.046.025 8.143-4.872-.011-5.177 3.415-2.036v10.021L13.472 31.85 1.925 24.979v-9.852z"/>
