--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
     <header class="page-header">
         <nav class="main-nav">
 
-          <div class="page-header page-header__wrapper">
+          <div class="page-header__wrapper">
         <a class="page-header__logo">
           <img class="page-header__logo-image"
           src="img/bkgd/mishka-logo-mobile-svg-copy@3x.png"
@@ -22,19 +22,19 @@
 
           <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--active">
-            <a class="main-nav__main">Главная</a>
+            <a class="main-nav__item main-nav__item--main">Главная</a>
           </li>
           <li class="site-list__item">
-            <a class="main-nav__catalog" href="catalog.html">Каталог товаров</a>
+            <a class="main-nav__item main-nav__item--catalog" href="catalog.html">Каталог товаров</a>
           </li>
           <li class="site-list__item">
-            <a class="main-nav__order" href="form.html">Вязание на заказ</a>
+            <a class="main-nav__item main-nav__item--order" href="form.html">Вязание на заказ</a>
           </li>
           <li class="site-list__item">
-            <a class="main-nav__search" href="#">Поиск по сайту</a>
+            <a class="main-nav__item main-nav__item--search" href="#">Поиск по сайту</a>
           </li>
           <li class="site-list__item">
-            <a class="main-nav__bin" href="#">Корзина:пока пуста</a>
+            <a class="main-nav__item main-nav__item--bin" href="#">Корзина:пока пуста</a>
           </li>
           </ul>
           <ul class="main-nav__list user-list">
@@ -60,11 +60,11 @@
           </a></li>
         </ul>
       </section>
+
       <article class="offer">
         <div class="offer__wrapper">
-          <header class="offer__name">Вязанные корзинки
-          </header>
-          <span class="offer__legend offer__legend--top">
+          <h1 class="offer__name">Вязанные корзинки</h1>
+          <span class="offer__legend">
             товар недели
           </span>
         </div>
@@ -101,7 +101,7 @@
         <img class="offer__image" src="img/content/triple-set-mobile.jpg"
         width="260" height="315" alt="товар дня">
         <p class="offer__price">Цена: 990 руб.</p>
-        <a href="#" class="button button-order">Заказать</a>
+        <a href="#" class="button">Заказать</a>
       </article>
       <section class="about">
         <h2 class="about__header">Коротко о нас:</h2>
@@ -163,7 +163,7 @@
         width="322" height="457"
         alt="г. Санкт-Петербург, улю Большая Конюшенная, д. 19/8, офис 101">
       </div>
-      <a href="#" class="button button-order">Напишите нам</a>
+      <a href="#" class="button">Напишите нам</a>
 
         <ul class="contacts__socials">
           <li class="contacts__item contacts__item--insta"><a href="#">инстаграм</a></li>
@@ -172,7 +172,7 @@
         </ul>
 
         <address>
-          <h3>Разработано</h3>
+          <p>Разработано</p>
             <a href="https://htmlacademy.ru/intensive/adaptive">
               <svg xmlns="http://www.w3.org/2000/svg" width="26.943" height="34.09" viewBox="0 0 26.943 34.09">
                 <path d="M13.62.017L13.472 0 0 1.412v24.661l13.473 8.017 13.43-7.99.042-.025V1.412L13.62.017zm11.399 12.11L13.495 5.334l-.001-.104-.087.05-.088-.056v.109L1.925 12.118V3.147l11.548-1.212L25.02 3.147v8.98zm-11.614-5.34L24.923 13.5l-4.479 2.64-7.093-4.221-.014 1.415 5.904 3.513-.86.507-5.03-2.992-.014 1.415 3.827 2.275-.782.523-3.031-1.787-.014 1.413 1.853 1.091-1.8 1.081-11.356-6.751 11.371-6.835zm-11.48 8.34l11.411 6.791.016 1.044-7.942-4.728-.015 1.416 7.979 4.795.018 1.076-7.973-4.74-.013 1.414 8.021 4.822.046.025 8.143-4.872-.011-5.177 3.415-2.036v10.021L13.472 31.85 1.925 24.979v-9.852z"/>
