layouts_buttons_fixed

--- a/source/form.html
+++ b/source/form.html
@@ -147,8 +147,8 @@
           </ul>
           <cite class="form-main__cite">*Поля обязательны для заполнения</cite>
 
-      </fieldset>
-      <button class="button button-order" type="submit">отправить заказ</button>
+        </fieldset>
+        <button class="form-main__button" type="submit">отправить заказ</button>
 
       </form>
     </main>
