--- a/source/index.html
+++ b/source/index.html
@@ -101,7 +101,7 @@
         <img class="offer__image" src="img/content/triple-set-mobile.jpg"
         width="260" height="315" alt="товар дня">
         <p class="offer__price">Цена: 990 руб.</p>
-        <a href="#" class="button">Заказать</a>
+        <a href="#" class="offer__button">Заказать</a>
       </article>
       <section class="about">
         <h2 class="about__header">Коротко о нас:</h2>
@@ -163,7 +163,7 @@
         width="322" height="457"
         alt="г. Санкт-Петербург, улю Большая Конюшенная, д. 19/8, офис 101">
       </div>
-      <a href="#" class="button">Напишите нам</a>
+      <a href="#" class="contacts__button">Напишите нам</a>
 
         <ul class="contacts__socials">
           <li class="contacts__item contacts__item--insta"><a href="#">инстаграм</a></li>
