--- a/source/catalog.html
+++ b/source/catalog.html
@@ -58,7 +58,7 @@
           <h2 class="catalog__heading">Зайчик-попрыгайчик</h2></a>
           <p class="catalog__discription">Рост 30 см, вес 200 г</p>
           <p class="catalog__price">1 200 руб.</p>
-          <a class="button button-popup" href="#">
+          <a class="catalog__button" href="#">
             <svg xmlns="http://www.w3.org/2000/svg" width="20.294" height="18.849" viewBox="264.205 370.961 20.294 18.849">
             <path fill="#231F20" d="M283.75 378.19h-3.151l-3.407-6.814c-.185-.37-.634-.52-1.006-.335-.371.186-.521.636-.335 1.006l3.071 6.143h-9.138l3.072-6.143c.185-.371.035-.821-.335-1.006-.37-.185-.821-.035-1.006.335l-3.407 6.814h-3.151c-.414 0-.75.336-.75.75s.336.75.75.75h.157l.855 2.991c-.187.137-.316.347-.316.595 0 .396.309.71.697.739l1.656 5.795h12.697l1.656-5.795c.388-.028.698-.344.698-.739 0-.249-.129-.459-.316-.596l.854-2.991h.157c.414 0 .75-.336.75-.75s-.338-.749-.752-.749zm-4.181 10.121h-10.433l-1.224-4.284h12.881l-1.224 4.284zm1.653-5.785h-13.739l-.81-2.836h15.359l-.81 2.836z"/>
             </svg>
@@ -73,7 +73,7 @@
           <h2 class="catalog__heading">Корзинка для белья</h2></a>
           <p class="catalog__discription">Диаметр 15 см, высота 10 см</p>
           <p class="catalog__price">690 руб.</p>
-          <a class="button button-popup" href="#">
+          <a class="catalog__button" href="#">
             <svg xmlns="http://www.w3.org/2000/svg" width="20.294" height="18.849" viewBox="264.205 370.961 20.294 18.849">
             <path fill="#231F20" d="M283.75 378.19h-3.151l-3.407-6.814c-.185-.37-.634-.52-1.006-.335-.371.186-.521.636-.335 1.006l3.071 6.143h-9.138l3.072-6.143c.185-.371.035-.821-.335-1.006-.37-.185-.821-.035-1.006.335l-3.407 6.814h-3.151c-.414 0-.75.336-.75.75s.336.75.75.75h.157l.855 2.991c-.187.137-.316.347-.316.595 0 .396.309.71.697.739l1.656 5.795h12.697l1.656-5.795c.388-.028.698-.344.698-.739 0-.249-.129-.459-.316-.596l.854-2.991h.157c.414 0 .75-.336.75-.75s-.338-.749-.752-.749zm-4.181 10.121h-10.433l-1.224-4.284h12.881l-1.224 4.284zm1.653-5.785h-13.739l-.81-2.836h15.359l-.81 2.836z"/>
             </svg>
@@ -88,7 +88,7 @@
           <h2 class="catalog__heading">Большая корзинка для игрушек</h2></a>
           <p class="catalog__discription">Диаметр 30 см, высота 30 см</p>
           <p class="catalog__price">1 500 руб.</p>
-          <a class="button button-popup" href="#">
+          <a class="catalog__button" href="#">
               <svg xmlns="http://www.w3.org/2000/svg" width="20.294" height="18.849" viewBox="264.205 370.961 20.294 18.849">
               <path fill="#231F20" d="M283.75 378.19h-3.151l-3.407-6.814c-.185-.37-.634-.52-1.006-.335-.371.186-.521.636-.335 1.006l3.071 6.143h-9.138l3.072-6.143c.185-.371.035-.821-.335-1.006-.37-.185-.821-.035-1.006.335l-3.407 6.814h-3.151c-.414 0-.75.336-.75.75s.336.75.75.75h.157l.855 2.991c-.187.137-.316.347-.316.595 0 .396.309.71.697.739l1.656 5.795h12.697l1.656-5.795c.388-.028.698-.344.698-.739 0-.249-.129-.459-.316-.596l.854-2.991h.157c.414 0 .75-.336.75-.75s-.338-.749-.752-.749zm-4.181 10.121h-10.433l-1.224-4.284h12.881l-1.224 4.284zm1.653-5.785h-13.739l-.81-2.836h15.359l-.81 2.836z"/>
               </svg>
@@ -101,7 +101,7 @@
         <video class="video__video" src="#" width="260" height="150"></video>
         <p class="video__text">По просьбам наших любимых фолловеров мы сняли для вас
           подробное видео о том, как появляются наши товары.</p>
-        <a class="button video__button" href="#">Сделать заказ</a>
+        <a class="video__button" href="#">Сделать заказ</a>
       </article>
 
     </main>
