--- a/source/form.html
+++ b/source/form.html
@@ -129,20 +129,20 @@
             placeholder="Отчество, если желаете" ></li>
 
             <li><label for="tel" class="form-main__legend
-              form-main__label--tel">тел</label>
+              form-main__label form-main__label--tel">тел</label>
             <input class="form-main__input form-main__input--tel" type="tel"
             name="tel" id="tel"
             placeholder="+7 XXX XXX XX XX*" required></li>
 
             <li><label for="email" class="form-main__legend
-              form-main__label--email"> e-mail</label>
+              form-main__label form-main__label--email"> e-mail</label>
             <input class="form-main__input form-main__input--email" type="email"
             name="email" id="email"
             placeholder="Ваш Email*" required></li>
 
 
             <li><label for="text" class="form-main__legend
-              form-main__label--text">доп</label>
+              form-main__label form-main__label--text">доп</label>
             <textarea class="form-main__textarea" name="text" id="text" cols="30" rows="10"
             placeholder="Опишите все ваши пожелания к заказу"></textarea></li>
           </ul>
