--- a/source/form.html
+++ b/source/form.html
@@ -69,37 +69,37 @@
         <legend class="form-main__legend">цвет</legend>
         <ul class="form-main__list">
           <li class="form-main__item form-main__item--chbx">
-            <input checked class="visually-hidden form-main__input"
+            <input checked class="visually-hidden form-main__input form-main__color-names"
             type="checkbox" name="white" id="white">
             <label class="form-main__label-chbx" for="white">
             <span>Белый</span></label>
           </li>
           <li class="form-main__item form-main__item--chbx">
-            <input checked class="visually-hidden form-main__input"
+            <input checked class="visually-hidden form-main__input form-main__color-names"
             type="checkbox" name="grey" id="grey">
             <label class="form-main__label-chbx" for="grey">
               <span>Серый</span></label>
           </li>
           <li class="form-main__item form-main__item--chbx">
-            <input class="visually-hidden form-main__input"
+            <input class="visually-hidden form-main__input form-main__color-names"
             type="checkbox" name="tiffany" id="tiffany">
             <label class="form-main__label-chbx" for="tiffany">
               <span>"Тиффани"</span></label>
           </li>
           <li class="form-main__item form-main__item--chbx">
-            <input class="visually-hidden form-main__input"
+            <input class="visually-hidden form-main__input form-main__color-names"
             type="checkbox" name="black" id="black">
             <label class="form-main__label-chbx" for="black">
               <span>Черный</span></label>
           </li>
           <li class="form-main__item form-main__item--chbx">
-            <input class="visually-hidden form-main__input"
+            <input class="visually-hidden form-main__input form-main__color-names"
             type="checkbox" name="pink" id="pink">
             <label class="form-main__label-chbx" for="pink">
               <span>Розовый</span></label>
           </li>
           <li class="form-main__item form-main__item--chbx">
-            <input class="visually-hidden form-main__input"
+            <input class="visually-hidden form-main__input form-main__color-names"
             type="checkbox" name="orange" id="orange">
             <label class="form-main__label-chbx" for="orange"><span>Оранжевый</span></label>
           </li>
@@ -128,21 +128,21 @@
             name="middlename" id="middlename"
             placeholder="Отчество, если желаете" ></li>
 
-            <li><label for="tel" class="form-main__legend
-              form-main__label form-main__label--tel">тел</label>
+            <li><label for="tel" class="form-main__contacts
+            form-main__contacts--tel">тел</label>
             <input class="form-main__input form-main__input--tel" type="tel"
             name="tel" id="tel"
             placeholder="+7 XXX XXX XX XX*" required></li>
 
-            <li><label for="email" class="form-main__legend
-              form-main__label form-main__label--email"> e-mail</label>
+            <li><label for="email" class="form-main__contacts
+            form-main__contacts--email"> e-mail</label>
             <input class="form-main__input form-main__input--email" type="email"
             name="email" id="email"
             placeholder="Ваш Email*" required></li>
 
 
-            <li><label for="text" class="form-main__legend
-              form-main__label form-main__label--text">доп</label>
+            <li><label for="text" class="form-main__contacts
+            form-main__contacts--text">доп</label>
             <textarea class="form-main__textarea" name="text" id="text" cols="30" rows="10"
             placeholder="Опишите все ваши пожелания к заказу"></textarea></li>
           </ul>
