Oksana_the_best

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,7 +10,7 @@
 
     <body class="body">
 
-    <header class="body__page-header page-header">
+    <header class="body__page-header page-header page-header--catalog">
         <nav class="main-nav">
 
             <div class="page-header__wrapper">
@@ -33,7 +33,7 @@
 
             <ul class="main-nav__list site-list site-list--closed"><!--чтобы скрыть класс site-list--closed-->
               <li class="site-list__item site-list__item--catalog">
-                <a class="main-nav__item main-nav__item--catalog" href="catalog.html">Каталог товаров</a>
+                <a class="main-nav__item main-nav__item--catalog" href="#">Каталог товаров</a>
               </li>
               <li class="site-list__item site-list__item--form">
                 <a class="main-nav__item main-nav__item--order" href="form.html">Вязание на заказ</a>
@@ -55,7 +55,7 @@
         </nav>
     </header>
 
-    <main class="catalog body__catalog">
+    <main class="body__catalog">
       <h1 class="catalog__header body__heading">Каталог товаров</h1>
 
       <section class="catalog catalog__products">
@@ -128,7 +128,7 @@
             width="260" height="195" alt="большая корзинка">
             </picture>
           </a>
-            <div class="catalog__ info catalog__info--wrap">
+            <div class="catalog__info catalog__info--wrap">
               <a class="catalog__link catalog__link--heading" href="#">
                 <h2 class="catalog__heading">Большая корзинка для игрушек</h2></a>
                 <p class="catalog__discription">Диаметр 30 см, высота 30 см</p>
