--- a/source/form.html
+++ b/source/form.html
@@ -76,48 +76,46 @@
               <span>Детская игрушка</span></label></li>
           </ul>
         </fieldset>
-
       <fieldset class="form-main__fieldset form-main__fieldset--color">
-        <div class="form-main__wrap">
           <legend class="form-main__legend form-main__legend--color">цвет</legend>
           <ul class="form-main__list form-main__list--color">
             <li class="form-main__item form-main__item--chbx">
-              <input checked class="visually-hidden form-main__input form-main__color-names"
+              <input checked class="visually-hidden form-main__input form-main__input--colors"
               type="checkbox" name="white" id="white">
               <label class="form-main__label-chbx" for="white">
-              <span>Белый</span></label>
+              Белый</label>
             </li>
             <li class="form-main__item form-main__item--chbx">
-              <input checked class="visually-hidden form-main__input form-main__color-names"
+              <input checked class="visually-hidden form-main__input form-main__input--colors"
               type="checkbox" name="grey" id="grey">
               <label class="form-main__label-chbx" for="grey">
-                <span>Серый</span></label>
+              Серый</label>
             </li>
             <li class="form-main__item form-main__item--chbx">
-              <input class="visually-hidden form-main__input form-main__color-names"
+              <input class="visually-hidden form-main__input form-main__input--colors"
               type="checkbox" name="tiffany" id="tiffany">
               <label class="form-main__label-chbx" for="tiffany">
-                <span>"Тиффани"</span></label>
+              «Тиффани»</label>
             </li>
             <li class="form-main__item form-main__item--chbx">
-              <input class="visually-hidden form-main__input form-main__color-names"
+              <input class="visually-hidden form-main__input form-main__input--colors"
               type="checkbox" name="black" id="black">
               <label class="form-main__label-chbx" for="black">
-                <span>Черный</span></label>
+              Черный</label>
             </li>
             <li class="form-main__item form-main__item--chbx">
-              <input class="visually-hidden form-main__input form-main__color-names"
+              <input class="visually-hidden form-main__input form-main__input--colors"
               type="checkbox" name="pink" id="pink">
               <label class="form-main__label-chbx" for="pink">
-                <span>Розовый</span></label>
+              Розовый</label>
             </li>
             <li class="form-main__item form-main__item--chbx">
-              <input class="visually-hidden form-main__input form-main__color-names"
+              <input class="visually-hidden form-main__input form-main__input--colors"
               type="checkbox" name="orange" id="orange">
-              <label class="form-main__label-chbx" for="orange"><span>Оранжевый</span></label>
+              <label class="form-main__label-chbx" for="orange">
+              Оранжевый</label>
             </li>
           </ul>
-        </div>
       </fieldset>
 
       <fieldset class="form-main__fieldset form-main__fieldset--bio">
