--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Магазин "Мишка"</title>
-        <link href="css/style.css" rel="stylesheet" type="text/css">
+        <link href="css/style.min.css" rel="stylesheet" type="text/css">
     </head>
 
     <body class="body">
@@ -15,6 +15,14 @@
 
             <div class="page-header__wrapper">
               <a class="page-header__logo" href="index.html">
+                <picture>
+                  <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+                  <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+                  <img class="page-header__logo-image" src="img/logo-mobile.svg"
+                  width="86" height="35" alt="Магазин Мишка">
+                </picture>
+
+              <!--
               <img class="page-header__logo-image"
               src="img/logo-mobile.svg"
               width="86" height="35" alt="Магазин Мишка">
@@ -26,6 +34,8 @@
               page-header__logo-image--desktop"
               src="img/logo-desktop.svg"
               width="149" height="72" alt="Магазин Мишка">
+
+              -->
               </a>
               <button class="page-header__toggle page-header__toggle--opened" aria-label="Окрыть меню" type="button">
               </button>
@@ -64,11 +74,11 @@
               <picture>
                 <source
                 media="(min-width: 1150px)"
-                srcset="img/photo-hare-desktop@1x.jpg">
+                srcset="img/photo-hare-desktop@1x.jpg 1x, img/photo-hare-desktop@2x.jpg 2x">
                 <source
                 media="(min-width: 768px)"
-                srcset="img/photo-hare-tablet@1x.jpg">
-                <img class="catalog__img" src="img/content/photo-1-mobile@3x.jpg"
+                srcset="img/photo-hare-tablet@1x.jpg 1x, img/photo-hare-tablet@2x.jpg 2x">
+                <img class="catalog__img" src="img/photo-hare-mobile@1x.jpg" srcset="img/photo-hare-mobile@2x.jpg 2x"
               width="260" height="195" alt="зайчик">
               </picture>
               </a>
@@ -92,11 +102,11 @@
             <picture>
               <source
               media="(min-width: 1150px)"
-              srcset="img/photo-bowl-desktop@1x.jpg">
+              srcset="img/photo-bowl-desktop@1x.jpg 1x, img/photo-bowl-desktop@2x.jpg 2x">
               <source
               media="(min-width: 768px)"
-              srcset="img/photo-bowl-tablet@1x.jpg">
-            <img class="catalog__img" src="img/content/photo-2-mobile@3x.jpg"
+              srcset="img/photo-bowl-tablet@1x.jpg 1x, img/photo-bowl-tablet@2x.jpg 2x">
+            <img class="catalog__img" src="img/photo-bowl-mobile@1x.jpg" srcset="img/photo-bowl-mobile@2x.jpg 2x"
             width="260" height="195" alt="корзинка">
             </picture>
           </a>
@@ -118,14 +128,13 @@
         <div class="catalog__item">
           <a class="catalog__link catalog__link--img" href="#">
             <picture>
-              <source
-              media="(min-width: 1150px)"
-              srcset="img/photo-toys-desktop@1x.jpg">
-              <source
-              media="(min-width: 768px)"
-              srcset="img/photo-toys-tablet@1x.jpg">
-            <img class="catalog__img" src="img/content/photo-3-mobile@3x.jpg"
-            width="260" height="195" alt="большая корзинка">
+              <source media="(min-width: 1150px)" srcset="img/photo-toys-desktop@1x.jpg 1x,
+              img/photo-toys-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-toys-tablet@1x.jpg 1x,
+              img/photo-toys-tablet@2x.jpg 2x">
+              <img class="catalog__img" src="img/photo-toys-mobile@1x.jpg"
+              srcset="img/photo-toys-mobile@2x.jpg 2x"
+              alt="большая корзинка">
             </picture>
           </a>
             <div class="catalog__info catalog__info--wrap">
