--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Магазин "Мишка"</title>
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/style.min.css" rel="stylesheet" type="text/css">
   </head>
 
   <body class="body"><!--123-->
@@ -14,7 +14,15 @@
 
             <div class="page-header__wrapper">
               <a class="page-header__logo">
-              <img class="page-header__logo-image"
+                <picture>
+                  <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+                  <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+                  <img class="page-header__logo-image" src="img/logo-mobile.svg"
+                  width="86" height="35" alt="Магазин Мишка">
+                </picture>
+
+              <!--
+                <img class="page-header__logo-image"
               src="img/logo-mobile.svg"
               width="86" height="35" alt="Магазин Мишка">
               <img class="page-header__logo-image
@@ -25,6 +33,7 @@
               page-header__logo-image--desktop"
               src="img/logo-desktop.svg"
               width="149" height="72" alt="Магазин Мишка">
+            -->
               </a>
               <button class="page-header__toggle page-header__toggle--opened" aria-label="Окрыть меню" type="button">
               </button>
@@ -109,13 +118,25 @@
               </tr>
             </table>
           </div>
-          <img class="offer__image" src="img/content/triple-set-mobile.jpg"
+
+          <picture>
+            <source media="(min-width: 1150px)"
+            srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)"
+            srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x">
+            <img class="offer__image" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x"
+            alt="товар дня">
+          </picture>
+<!-- width="260" height="315"
+  class="offer__image offer__image--tablet offer__image--desktop"
+  <img class="offer__image" src="img/content/triple-set-mobile.jpg"
           width="260" height="315" alt="товар дня">
           <img class="offer__image offer__image--tablet" src="img/triple-set-tablet@1x.jpg"
           width="333" height="404" alt="товар дня">
           <img class="offer__image offer__image--desktop" src="img/triple-set-desktop@1x.jpg"
           width="525" height="636" alt="товар дня">
-          <div class="offer__wrapper-price">
+-->
+            <div class="offer__wrapper-price">
             <p class="offer__price">Цена: 990 руб.</p>
             <a href="#" class="offer__button">Заказать</a>
           </div>
