--- a/source/catalog.html
+++ b/source/catalog.html
@@ -41,7 +41,7 @@
               </button>
             </div>
 
-            <ul class="main-nav__list site-list site-list--closed"><!--чтобы скрыть класс site-list--closed-->
+            <ul class="main-nav__list site-list"><!--чтобы скрыть класс site-list--closed-->
               <li class="site-list__item site-list__item--catalog">
                 <a class="main-nav__item main-nav__item--catalog" href="#">Каталог товаров</a>
               </li>
@@ -66,9 +66,9 @@
     </header>
 
     <main class="body__catalog">
-      <h1 class="catalog__header body__heading">Каталог товаров</h1>
+      <h1 class="catalog__header">Каталог товаров</h1>
 
-      <section class="catalog catalog__products">
+      <section class="catalog catalog--products">
         <div class="catalog__item">
             <a class="catalog__link catalog__link--img" href="#">
               <picture>
@@ -237,10 +237,7 @@
         </form>
       </section>
     </div>
-
-
-
-
+    <script type="text/javascript" src="js/mishka.js">
+    </script>
     </body>
-
 </html>
