--- a/source/form.html
+++ b/source/form.html
@@ -39,7 +39,7 @@
               </button>
             </div>
 
-            <ul class="main-nav__list site-list site-list--closed"><!--чтобы скрыть класс site-list--closed-->
+            <ul class="main-nav__list site-list"><!--чтобы скрыть класс site-list--closed-->
               <li class="site-list__item site-list__item--catalog">
                 <a class="main-nav__item main-nav__item--catalog" href="catalog.html">Каталог товаров</a>
               </li>
@@ -64,7 +64,7 @@
     </header>
 
     <main class="form-main body__main">
-      <h1 class="body__heading form-main__header">Вязание на заказ</h1>
+      <h1 class="form-main__header">Вязание на заказ</h1>
       <p class="form-main__text">Мы будем рады воплотить в жизнь
         ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить
         детали</p>
@@ -86,7 +86,7 @@
           </ul>
         </fieldset>
       <fieldset class="form-main__fieldset form-main__fieldset--color">
-          <legend class="form-main__legend form-main__legend--color">цвет</legend>
+          <p class="form-main__legend form-main__legend--color">цвет</p>
           <ul class="form-main__list form-main__list--color">
             <li class="form-main__item form-main__item--chbx">
               <input checked class="visually-hidden form-main__input form-main__input--colors"
@@ -220,6 +220,8 @@
               <p class="visually-hidden">htmlacademy</p></a>
         </address>
       </div>
-  </footer>
-</body>
+    </footer>
+    <script type="text/javascript" src="js/mishka.js">
+    </script>
+  </body>
 </html>
