--- a/source/form.html
+++ b/source/form.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Магазин "Мишка"</title>
+        <link rel="preload" as="font" href="fonts/opensans.woff2">
         <link href="css/style.min.css" rel="stylesheet" type="text/css">
     </head>
 
@@ -251,7 +252,7 @@
         </address>
       </div>
     </footer>
-    <script type="text/javascript" src="js/mishka.js"></script>
-    <script type="text/javascript" src="js/picture-fill.js"></script>
+    <script type="text/javascript" src="js/mishka.min.js"></script>
+    <script type="text/javascript" src="js/picture-fill.min.js"></script>
   </body>
 </html>
