--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Магазин "Мишка"</title>
+    <link rel="preload" as="font" href="fonts/opensans.woff2">
     <link href="css/style.min.css" rel="stylesheet" type="text/css">
   </head>
 
@@ -297,7 +298,7 @@
         </form>
       </section>
     </div>
-    <script type="text/javascript" src="js/mishka.js"></script>
-    <script type="text/javascript" src="js/picture-fill.js"></script>
+    <script type="text/javascript" src="js/mishka.min.js"></script>
+    <script type="text/javascript" src="js/picture-fill.min.js"></script>
   </body>
 </html>
