--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Магазин "Мишка"</title>
-    <link rel="preload" as="font" href="fonts/opensans.woff2">
+    <link rel="preload" as="font" href="fonts/opensans.woff">
     <link href="css/style.min.css" rel="stylesheet" type="text/css">
   </head>
 
